modules/network/nsg-syslog-server/main.tf
### Network Security Group
resource "azurerm_network_security_group" "default" {
  name                = "nsg-${var.workload}-server"
  location            = var.location
  resource_group_name = var.resource_group_name
}

resource "azurerm_network_security_rule" "allow_inbound_ssh" {
  name                        = "AllowInboundSSH"
  priority                    = 500
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "22"
  source_address_prefixes     = var.allowed_source_address_prefixes
  destination_address_prefix  = "*"
  resource_group_name         = var.resource_group_name
  network_security_group_name = azurerm_network_security_group.default.name
}

resource "azurerm_network_security_rule" "allow_inbound_udp_vnet" {
  name                        = "AllowInboundUDPVnet"
  priority                    = 510
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Udp"
  source_port_range           = "*"
  destination_port_range      = "514"
  source_address_prefix       = "VirtualNetwork"
  destination_address_prefix  = "*"
  resource_group_name         = var.resource_group_name
  network_security_group_name = azurerm_network_security_group.default.name
}

resource "azurerm_network_security_rule" "deny_all_inbound" {
  name                        = "DenyAll"
  priority                    = 1000
  direction                   = "Inbound"
  access                      = "Deny"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = var.resource_group_name
  network_security_group_name = azurerm_network_security_group.default.name
}

resource "azurerm_network_interface_security_group_association" "default" {
  network_interface_id      = var.syslog_network_interface_id
  network_security_group_id = azurerm_network_security_group.default.id
}
